    file-modification-time, file-access-time, file-change-time,
    file-type and all procedures using file-type. These are:
    regular-file?, symbolic-link?, block-device?, character-device?
    fifo? and socket?.
  - Unit "data-structures": alist-{update[!],ref} were made consistent
    with srfi-1 in the argument order of comparison procedures.

- Tools
  - A debugger is now available, known as "feathers", which allows
    basic source-level debugging of compiled Scheme code.
  - A statistical profiler has been added, enabling sampling-based
    runtime profiling of compiled programs.
  - "chicken-install"
    - When installing eggs in deploy mode, already satisfied
      dependencies aren't reinstalled every time (#1106).
  - "chicken-uninstall"
    - -prefix and -deploy options were added, matching chicken-install.
  - "chicken-status"
    - -prefix and -deploy options were added, matching chicken-install.

4.10.1

- Core libraries
  - try-compile from setup-api cleans up temporary output files (#1213).

- Runtime system:
  - The calling convention of CPS procedures has been changed to
    use "argument vectors" instead of C calling convention.
  - The C API of C_values(), C_do_apply() and how to invoke CPS
    functions has changed.  The C_procN() macros have disappeared.
    The manual example in "Accessing external objects" for C_values
    has been updated.  See also the "numbers" egg for examples on
    how to support pre- and post-4.10.1 CHICKENs simultaneously.
  - Apply hack is no longer used; the limitation of 128 arguments
    has been lifted for platforms which had no apply hack.
  - Increased the "binary compatibility version" to 8.

4.10.0

- Security fixes
  - CVE-2014-6310: Use POSIX poll() on Android platform to avoid
    potential select() buffer overrun.
  - CVE-2014-9651: substring-index[-ci] no longer scans beyond string
    boundaries.
  - CVE-2015-4556: string-translate* no longer scans beyond string
    boundaries.

- Core libraries