@@ -77,6 +77,8 @@
     fifo? and socket?.
   - Unit "data-structures": alist-{update[!],ref} were made consistent
     with srfi-1 in the argument order of comparison procedures.
+  - Unit "lolevel": locative-ref has been fixed for locatives of u32
+    and s32vectors (thanks to Joerg Wittenberger for pointing this out).
 
 - Tools
   - A debugger is now available, known as "feathers", which allows
